[package]
name = "rust-peer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["noise", "yamux", "kad", "tcp", "identify", "macros", "tokio"] }
libp2p-mplex = "0.43.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
